--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <title>Portfolio | Yurii Atamanenko</title>
 
     <script type="text/javascript">
       (function (l) {
